add search filter `where`; bump version to 1.0.5
